--- a/style.css
+++ b/style.css
@@ -1298,6 +1298,11 @@ margin-bottom: 1rem;
         margin: 2rem 0;
     }
 
+    .client-right-container{
+        width: 100%;
+        height: 60vh;
+    }
+
 
     .client-card{
         width: 20rem;
@@ -1345,14 +1350,14 @@ margin-bottom: 1rem;
 
     .top-left{
         top: 0;
-        left: 90px;
+        left: 0;
         /* z-indexs: 5; */
     }
 
     .bottom-right{
         /* display: none; */
         bottom: 0;
-        right: 90px;
+        right: 0;
     }
 
     .final{
