--- a/style.css
+++ b/style.css
@@ -1300,7 +1300,7 @@ margin-bottom: 1rem;
 
     .client-right-container{
         width: 100%;
-        height: 60vh;
+        height: auto;
     }
 
 
@@ -1349,14 +1349,14 @@ margin-bottom: 1rem;
     }
 
     .top-left{
-        top: 0;
+        top: -50px;
         left: 0;
         /* z-indexs: 5; */
     }
 
     .bottom-right{
         /* display: none; */
-        bottom: 0;
+        bottom: -50px;
         right: 0;
     }
 
