--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body{
     height: 100vh;
     margin: 0;
     display: flex;
+    /* background-color: #6A26FA; */
 }
 
 .head-lower{
@@ -104,7 +105,8 @@ body{
 
 .one-left-outer{
     width: 90%;
-    height: 90%;
+    height: 100%;
+    /* background-color: aquamarine; */
 }
 
 .one-right{
@@ -114,10 +116,17 @@ body{
 
 .row2{
     width: 70%;
+    /* background-color: antiquewhite; */
+}
+
+.stats{
+    /* background-color: aqua; */
+    height: 100%;
 }
 
 .row3{
     width: 70%;
+    /* background-color: bisque; */
 }
 
 .heading{
@@ -134,7 +143,6 @@ body{
 .desc{
     height: 64px;
     width: 558px;
-    font-family: Poppins;
     font-size: 20px;
     font-weight: 500;
     line-height: 32px;
@@ -220,13 +228,12 @@ color: #2F2F2F;
 .two{
     width: 100%;
     height: 100vh;
-    margin: 0;
+    margin: 1rem 0;
     display: flex;
 }
 
 .two-left{
     flex: 1;
-    /* background-color: aliceblue; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -237,6 +244,9 @@ color: #2F2F2F;
     display: flex;
     align-items: center;
 }
+.text-container{
+    height: 50%;
+}
 
 .prim-purple{
     color: var(--primary-purple);
@@ -246,7 +256,7 @@ color: #2F2F2F;
 .three{
     width: 100%;
     height: 100vh;
-    margin: 0;
+    margin: 1rem 0;
     display: flex;
     background-color: rgba(106, 38, 250, 0.03);
 }
@@ -357,7 +367,7 @@ line-height: 66px;
   .four{
     width: 100%;
     height: 100vh;
-    margin: 0;
+    margin: 1rem 0;
     display: flex;
     flex-direction: column;
     /* background-color: darksalmon; */
@@ -409,7 +419,7 @@ line-height: 66px;
     line-height: 54px;
     letter-spacing: 0px;
     text-align: center;
-
+    margin: 2rem 0;
   }
 
   .heading-four-two{
@@ -426,8 +436,8 @@ line-height: 66px;
   .five{
     width: 100%;
     height: 100vh;
-    margin: 0;
     display: flex;
+    margin: 1rem 0;
   }
 
   .five-left{
@@ -435,6 +445,7 @@ line-height: 66px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    /* background-color: #6A26FA; */
   }
 
   .five-right{
@@ -481,6 +492,16 @@ line-height: 66px;
     align-items: center;
     justify-content: center;
     color: #FFFFFF;
+    /* background-color: aquamarine; */
+  }
+
+  .final-up-left-container{
+        height: 80%;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
   }
 
   .final-up-right{
@@ -605,7 +626,7 @@ margin-bottom: 1rem;
 .client{
     width: 100%;
     height: 100vh;
-    margin: 0;
+    margin: 2rem 0;
     display: flex;
 }
 
@@ -622,14 +643,12 @@ margin-bottom: 1rem;
 
 .client-right{
     flex: 2;
-    /* background-color: aliceblue; */
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .client-right-container{
-    /* background-color: aqua; */
     display: flex;
     flex-direction: column;
     position: relative;
@@ -646,13 +665,13 @@ margin-bottom: 1rem;
 
 .top-left{
     top: -50px;
-    left: -100px;
+    left: -75px;
     z-index: 5;
 }
 
 .bottom-right{
     bottom: -50px;
-    right: -100px;
+    right: -75px;
     z-index: 6;
 }
 
