--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;700&display=swap');
 
 
@@ -91,7 +90,6 @@ body{
     height: 100vh;
     margin: 0;
     display: flex;
-    /* background-color: #6A26FA; */
 }
 
 .head-lower{
@@ -110,31 +108,25 @@ body{
 .one-left-outer{
     width: 90%;
     height: 100%;
-    /* background-color: aquamarine; */
 }
 
 .one-right{
     flex: 1.5;
-    /* background-color: rgba(106, 38, 250, 0.13); */
 }
 
 .row2{
     width: 70%;
-    /* background-color: antiquewhite; */
 }
 
 .stats{
-    /* background-color: aqua; */
     height: 100%;
 }
 
 .row3{
     width: 70%;
-    /* background-color: bisque; */
 }
 
 .heading{
-    /* height: 108px; */
     width: 538px;
     font-family: Poppins;
     font-size: 44px;
@@ -177,20 +169,14 @@ color: #2F2F2F;
 }
 
 .numbers-text{
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-/* identical to box height, or 217% */
-
-display: flex;
-align-items: center;
-justify-content: center;
-
-/* Color / Text / Dark */
-
-color: #2F2F2F;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Poppins';
+    color: #2F2F2F;
 }
 
 .btn-sec{
@@ -221,12 +207,6 @@ color: #2F2F2F;
 }
 
 
-/* .btn-sec:hover{
-    background-color: #6A26FA;
-    color: #FFFFFF;
-} */
-
-
 /* Two */
 
 .two{
@@ -250,6 +230,7 @@ color: #2F2F2F;
 }
 .text-container{
     height: 50%;
+    width: 90%;
 }
 
 .prim-purple{
@@ -274,7 +255,6 @@ color: #2F2F2F;
 
 .three-right{
     flex: 1;
-    /* background-color: cadetblue; */
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -291,7 +271,6 @@ font-style: normal;
 font-weight: 600;
 font-size: 56px;
 line-height: 66px;
-/* or 119% */
 
 }
 
@@ -303,7 +282,6 @@ line-height: 66px;
 .three-right-container{
     width: 80%;
     height: 80%;
-    /* background-color: aqua; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -320,7 +298,6 @@ line-height: 66px;
 .three-grid-box{
     height: 14rem;
     width: 13rem;
-    /* background-color: #6A26FA; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -329,7 +306,6 @@ line-height: 66px;
 
 .box-up{
     flex: 1;
-    /* background-color: beige; */
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -337,14 +313,12 @@ line-height: 66px;
 
 .box-low{
     flex: 1;
-    /* background-color: darkgoldenrod; */
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
 
 .three-right-component{
-    /* background-color: cornflowerblue; */
     width: 200px;
     height: 20%;
     display: flex;
@@ -374,27 +348,22 @@ line-height: 66px;
     margin: 1rem 0;
     display: flex;
     flex-direction: column;
-    /* background-color: darksalmon; */
   }
 
   .four-up{
     flex: 1;
-    /* background-color: aquamarine; */
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    /* background-color: antiquewhite; */
   }
 
   .four-down{
     flex: 2;
     display: flex;
-    /* background-color: aqua; */
   }
 
   .four-down-left{
     flex: 1;
-    /* background-color: aliceblue; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -403,7 +372,6 @@ line-height: 66px;
 
   .four-down-right{
     flex: 1;
-    /* background-color: darkgrey; */
     display: flex;
     align-items: center;
   }
@@ -434,7 +402,6 @@ line-height: 66px;
     line-height: 54px;
     height: 54px;
     text-align: left;
-    /* background-color: aqua; */
   }
 
   .five{
@@ -449,12 +416,10 @@ line-height: 66px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    /* background-color: #6A26FA; */
   }
 
   .five-right{
     flex: 1;
-    /* background-color: aliceblue; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -469,7 +434,6 @@ line-height: 66px;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-color: aqua; */
   }
 
   .final-container{
@@ -478,7 +442,6 @@ line-height: 66px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.11);
     display: flex;
     flex-direction: column;
-    /* background-color: brown; */
   }
 
   .final-up{
@@ -496,7 +459,6 @@ line-height: 66px;
     align-items: center;
     justify-content: center;
     color: #FFFFFF;
-    /* background-color: aquamarine; */
   }
 
   .final-up-left-container{
@@ -520,19 +482,7 @@ line-height: 66px;
     flex: 1;
   }
 
-
-
-  /* <svg width="573" height="227" viewBox="0 0 573 227" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M544.987 221.387C522.326 228.913 497.676 227.782 475.802 218.213C453.927 208.644 436.384 191.317 426.562 169.582L393.616 96.968V96.5363C392.991 95.2454 392.062 94.1246 390.909 93.2696C389.756 92.4146 388.413 91.8506 386.994 91.6258C385.576 91.4011 384.124 91.5222 382.763 91.9789C381.401 92.4355 380.17 93.2141 379.175 94.2483C367.433 106.88 353.216 116.969 337.408 123.889C321.6 130.809 304.536 134.414 287.275 134.478C270.014 134.543 252.924 131.067 237.064 124.266C221.204 117.464 206.913 107.482 195.075 94.939C194.072 93.9157 192.838 93.1479 191.476 92.7003C190.114 92.2527 188.665 92.1383 187.249 92.3668C185.834 92.5953 184.494 93.16 183.343 94.0133C182.192 94.8666 181.263 95.9836 180.634 97.2702L180.245 98.1336L147.342 170.704C137.043 193.182 118.49 210.851 95.5155 220.06C72.5414 229.269 46.9022 229.315 23.8956 220.187C0.888927 211.059 -17.727 193.456 -28.1057 171.014C-38.4845 148.573 -39.833 123.008 -31.8725 99.6015L28.6584 -76.1041C37.3778 -101.405 53.7857 -123.358 75.5951 -138.905C97.4044 -154.452 123.528 -162.817 150.325 -162.834L423.32 -164C450.058 -164.005 476.133 -155.694 497.922 -140.22C519.711 -124.746 536.131 -102.879 544.9 -77.6582L605.777 98.6949C609.914 110.733 611.621 123.471 610.8 136.171C609.979 148.872 606.646 161.285 600.994 172.692C595.342 184.1 587.482 194.276 577.869 202.634C568.256 210.992 557.08 217.365 544.987 221.387Z" fill="rgba(106, 38, 250, 1)"/>
-                    <path d="M544.987 221.387C522.326 228.913 497.676 227.782 475.802 218.213C453.927 208.644 436.384 191.317 426.562 169.582L393.616 96.968V96.5363C392.991 95.2454 392.062 94.1246 390.909 93.2696C389.756 92.4146 388.413 91.8506 386.994 91.6258C385.576 91.4011 384.124 91.5222 382.763 91.9789C381.401 92.4355 380.17 93.2141 379.175 94.2483C367.433 106.88 353.216 116.969 337.408 123.889C321.6 130.809 304.536 134.414 287.275 134.478C270.014 134.543 252.924 131.067 237.064 124.266C221.204 117.464 206.913 107.482 195.075 94.939C194.072 93.9157 192.838 93.1479 191.476 92.7003C190.114 92.2527 188.665 92.1383 187.249 92.3668C185.834 92.5953 184.494 93.16 183.343 94.0133C182.192 94.8666 181.263 95.9836 180.634 97.2702L180.245 98.1336L147.342 170.704C137.043 193.182 118.49 210.851 95.5155 220.06C72.5414 229.269 46.9022 229.315 23.8956 220.187C0.888927 211.059 -17.727 193.456 -28.1057 171.014C-38.4845 148.573 -39.833 123.008 -31.8725 99.6015L28.6584 -76.1041C37.3778 -101.405 53.7857 -123.358 75.5951 -138.905C97.4044 -154.452 123.528 -162.817 150.325 -162.834L423.32 -164C450.058 -164.005 476.133 -155.694 497.922 -140.22C519.711 -124.746 536.131 -102.879 544.9 -77.6582L605.777 98.6949C609.914 110.733 611.621 123.471 610.8 136.171C609.979 148.872 606.646 161.285 600.994 172.692C595.342 184.1 587.482 194.276 577.869 202.634C568.256 210.992 557.08 217.365 544.987 221.387Z" fill="rgba(255, 255, 255, 0.19)" fill-opacity="0.19"/>
-                    </svg> */
-
-
-
-
-
 .hero-img1{
-    /* position: absolute; */
     object-fit: cover;
     height: 105vh;
 }
@@ -556,19 +506,16 @@ line-height: 66px;
 .final-low{
     display: flex;
     flex-direction: column;
-    /* background-color: antiquewhite; */
 }
 
 .final-low-up{
     display: flex;
     flex: 4;
     margin-top: 8rem;
-    /* background-color: #6A26FA; */
 }
 
 .final-low-down{
     flex: 1;
-    /* background-color: aliceblue; */
     width: 20%;
     display: flex;
     align-items: center;
@@ -585,7 +532,6 @@ line-height: 66px;
 }
 
 .low-left-content{
-    /* margin: 2rem 0; */
     height: 60%;
     display: flex;
     flex-direction: column;
@@ -614,7 +560,6 @@ margin-bottom: 1rem;
 }
 
 .footer-sec{
-    /* background-color: aliceblue; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -883,6 +828,11 @@ margin-bottom: 1rem;
         justify-content: center;
     }
 
+    .text-container{
+        height: 50%;
+        width: 90%;
+    }
+
     .four-down-right-container{
         margin-top: 2rem;
         width: 100%;
@@ -1140,6 +1090,11 @@ margin-bottom: 1rem;
         justify-content: center;
         height: 100%;
         width: 100%;
+    }
+
+    .text-container{
+        height: 50%;
+        width: 90%;
     }
 
     .hero-img2{
